--- a/SpringBoot-SpringData-oneToOne/src/main/resources/application.properties
+++ b/SpringBoot-SpringData-oneToOne/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#开启SQL显示
 spring.jpa.show-sql=true
+
