--- a/SpringBoot-SpringData-ManyToMany/src/main/resources/application.properties
+++ b/SpringBoot-SpringData-ManyToMany/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.jpa.show-sql=true
